<resources>
    <string name="app_name">Dapplytics</string>
    <string name="h1"><u>Water crisis threat looms large claims UN climate report</u></string>
    <string name="h2"><u><![CDATA[Government initiates project to increase disaster resilience of J&K, Ladakh]]></u></string>
    <string name="h3"><u>Delayed monsoon withdrawal set to mark hat-trick</u></string>
    <string name="h4"><u>Scientists analysing Uttarakhand floods highlight need to improve monitoring of glaciers</u></string>
    <string name="h5"><u>Europe to US to India, it’s been a week of extreme weather events</u></string>
    <string name="floodHeading">HP, Uttrakhand stare at threat due to glacier</string>
    <string name="droughtHeading">Drought situation Recovered in Rajasthan after moderete rainfall</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nh1">Uttarakhand Braces for Intense Weather; Extremely Heavy Rains In Forecast on October 18</string>
    <string name="ndesc1">Saturday, October 16: Intense weather activity is set to drench Uttarakhand this Sunday and Monday, October 17-18, as heavy showers have been forecast across the state.</string>
    <string name="npb1">TWC Indi</string>
    <string name="nh2">\"उत्तराखंड: भारी बारिश का अलर्ट, सभी जिलों में सोमवार को बंद रहेंगे स्कूल और आंगनबाड़ी केंद्र \"</string>
    <string name="ndesc2">Uttarakhand weather Update News: 18 अक्तूबर को उत्तरकाशी, चमोली, रुद्रप्रयाग, पिथौरागढ़, बागेश्वर, अल्मोड़ा, नैनीताल, चंपावत, देहरादून, टिहरी व पौड़ी के कई और हरिद्वार व ऊधमसिंह नगर के कुछ इलाकों में भारी से बहुत भारी बारिश हो सकती है।</string>
    <string name="npb2">अमर उजाला नेटवर्क, देहरादून</string>
    <string name="nh3">Uttarakhand Weather Update News: भारी बारिश के अलर्ट के बाद केदारनाथ यात्रा दो दिन के लिए अस्थाई रूप से रोकी</string>
    <string name="ndesc3"><![CDATA[मौसम विभाग द्वारा 17 अक्तूबर से दो-तीन दिन तक चारधाम सहित अधिकांश पर्वतीय क्षेत्रों में भारी बारिश की चेतावनी जारी की गई है। जिसको देखते हुए प्रशासन ने केदारनाथ, गंगोत्री और यमुनोत्री धाम की यात्रा रोक दी है। ]]></string>
    <string name="npb3">न्यूज डेस्क</string>
    <string name="nh4">\" IMD predicts heavy rain, hailstorm in Kerala, 16 other states, UTs. Full forecast till Oct 19\"</string>
    <string name="ndesc4">A western disturbance lies as a cyclonic circulation over southern parts of Afghanistan and nearby areas in lower levels, leading to rainfall and hailstorm in several parts of India. (HT_PRINT)</string>
    <string name="npb4">mint</string>

    <string-array name="state">
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chhattisgarh</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Odisha</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttar Pradesh</item>
        <item>Uttarakhand</item>
        <item>West Bengal</item>
        <item>Andaman and Nicobar Islands</item>
        <item>Chandigarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Lakshadweep</item>
        <item>Pondicherry</item>
    </string-array>

</resources>